# gru-lunar-twin

./: .bazelversion  .env.example  .pre-commit-config.yaml  BUILD.bazel  Dockerfile  WORKSPACE  bazel-bin  bazel-gru-lunar-twin  bazel-out  bazel-testlogs  pytest.ini  sanity_test.py
dashboard/: app.py
docs/: physics_integration_roadmap.md  tasks.md
rl/: __init__.py  example.py
rl/envs/: __init__.py  fleet_env.py
rl/eval/: reward.ipynb
rl/training/: train.py
ros2_ws/: rec.sh
ros2_ws/data/bagfiles/fleet_20250617_211950/: fleet_20250617_211950_0.db3  fleet_20250617_211950_1.db3  fleet_20250617_211950_10.db3  fleet_20250617_211950_100.db3  fleet_20250617_211950_101.db3  fleet_20250617_211950_102.db3  fleet_20250617_211950_103.db3  fleet_20250617_211950_104.db3  fleet_20250617_211950_105.db3  fleet_20250617_211950_106.db3  fleet_20250617_211950_107.db3  fleet_20250617_211950_108.db3  fleet_20250617_211950_109.db3  fleet_20250617_211950_11.db3  fleet_20250617_211950_110.db3  fleet_20250617_211950_111.db3  fleet_20250617_211950_112.db3  fleet_20250617_211950_113.db3  fleet_20250617_211950_114.db3  fleet_20250617_211950_115.db3  fleet_20250617_211950_116.db3  fleet_20250617_211950_117.db3  fleet_20250617_211950_118.db3  fleet_20250617_211950_119.db3  fleet_20250617_211950_12.db3  fleet_20250617_211950_120.db3  fleet_20250617_211950_121.db3  fleet_20250617_211950_122.db3  fleet_20250617_211950_123.db3  fleet_20250617_211950_124.db3  fleet_20250617_211950_125.db3  fleet_20250617_211950_126.db3  fleet_20250617_211950_127.db3  fleet_20250617_211950_128.db3  fleet_20250617_211950_129.db3  fleet_20250617_211950_13.db3  fleet_20250617_211950_130.db3  fleet_20250617_211950_131.db3  fleet_20250617_211950_132.db3  fleet_20250617_211950_133.db3  (+246 more)
ros2_ws/data/bagfiles/fleet_20250617_212149/: fleet_20250617_212149_0.db3  fleet_20250617_212149_1.db3  fleet_20250617_212149_10.db3  fleet_20250617_212149_100.db3  fleet_20250617_212149_101.db3  fleet_20250617_212149_102.db3  fleet_20250617_212149_103.db3  fleet_20250617_212149_104.db3  fleet_20250617_212149_105.db3  fleet_20250617_212149_106.db3  fleet_20250617_212149_11.db3  (+237 more)
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/fleet_core/: setup.py
ros2_ws/src/fleet_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/sim/: CMakeLists.txt  package.xml
ros2_ws/src/sim/plugins/: CMakeLists.txt  README.md  build.sh  gravity_plugin.cc
scripts/: brew_services.sh  ros_docker.sh  run_bridge_test.sh  run_eval_notebook.py  simulate_soc_data.py  soc_influx_bridge.py  test_eval_notebook.py  test_fleet_env.py  test_headless.sh  test_influx.py  test_power_simple.py  test_reward_shaping.py  test_sb3_compatibility.py  test_smoke.py  test_trained_model.py  validate_urdf.sh
sim/: BUILD.bazel  README.md
sim/launch/: headless.launch.py  south_pole.launch.py  view_stub.launch.py
sim/models/transport_rover/: transport_rover.urdf
sim/plugins/: CMakeLists.txt  gravity_plugin.cc  gravity_scale_plugin.cpp  test_gravity_topic.py
sim/worlds/: lunar_gravity_test.world  south_pole.world
tests/unit/: test_dummy.py  test_fleet_env.py
(+78 files in other folders)
